--- a/Django_tutorial_poll_site/polls/templates/polls/index.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/index.html
@@ -9,7 +9,8 @@
     {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+		<!-- detailはpolls.urls モジュール の path() 関数で name 引数を定義しているため、ここで使うことができる -->
         {% endfor %}
     </ul>
     {% else %}
