--- a/Django_tutorial_poll_site/polls/templates/polls/index.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/index.html
@@ -1,3 +1,4 @@
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,8 @@
     <title>Polls List</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
     <h1>Poll Site</h1>
@@ -13,13 +16,26 @@
     {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'polls:detail' question.id %}" target="_blank">{{ question.question_text }}</a></li>
 		<!-- detailはpolls.urls モジュールの path() 関数で name 引数を定義しているため、ここで使うことができる -->
 		<!-- "polls:"はpoll.urls モジュールURLのapp_nameで名前空間を設定している。他のアプリの同じビュー名があっても衝突しないようにするため -->
         {% endfor %}
     </ul>
     {% else %}
     <p>No polls are available.</p>
+    {% endif %}
+    {% bootstrap_button button_type="submit" content="hello"%}
+    {% if latest_question_list %}
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu">
+            {% for question in latest_question_list %}
+                <li><a class="dropdown-item" href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
     {% endif %}
 </body>
 </html>
