--- a/Django_tutorial_poll_site/polls/templates/polls/detail.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/detail.html
@@ -6,7 +6,7 @@
     <title>Polls List</title>
 </head>
 <body>
-    <form action="{% url 'polls:vote' question.id %}" method="post">
+    <form action="{% url 'polls:detail' question.id %}" method="post">
         {% csrf_token %}
         <fieldset>
             <legend><h1>{{ question.question_text }}</h1></legend>
