--- a/Django_tutorial_poll_site/polls/templates/polls/results.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/results.html
@@ -1,21 +1,19 @@
+{% extends "polls/header.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polls List</title>
-</head>
-<body>
-	<h1>{{ question.question_text }}</h1>
-	<ul>
-	{% for choice in question.choice_set.all %}
-		<li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-		<!-- pluralizeはDjango テンプレートのフィルタで、"|"はフィルタを適用するための構文 -->
-		<!-- pluralize フィルタは、数値が1以外の場合に s を追加する -->
-	{% endfor %}
-	</ul>
-	<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
-</body>
-</html>
+{% block title %}Polls Detail - {{ question.question_text }}{% endblock %}
 
+{% load django_bootstrap5 %}
+
+{% block content %}
+    <main class="container mt-4">
+		<h1 class="display-4">{{ question.question_text }}</h1>
+			<ul>
+			{% for choice in question.choice_set.all %}
+				<li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+				<!-- pluralizeはDjango テンプレートのフィルタで、"|"はフィルタを適用するための構文 -->
+				<!-- pluralize フィルタは、数値が1以外の場合に s を追加する -->
+			{% endfor %}
+			</ul>
+		<a href="{% url 'polls:detail' question.id %}" class="btn btn-primary">Vote again?</a>
+    </main>
+{% endblock content %}
