--- a/Django_tutorial_poll_site/polls/static/polls/style.css
+++ b/Django_tutorial_poll_site/polls/static/polls/style.css
@@ -1,3 +1,24 @@
 li a {
     color: green;
 }
+
+.header-image {
+    height: 3em;
+    margin-left: 10px;
+}
+
+.header-form {
+    margin: 0;
+    padding: 0;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
+
+.header-button {
+    text-decoration: none;
+    color: inherit;
+    font-size: 2em;
+    background: none;
+    border: none;
+}
