--- a/Django_tutorial_poll_site/polls/templates/polls/index.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/index.html
@@ -20,7 +20,7 @@
         {% bootstrap_alert content=error_message alert_type="danger" %}
     {% endif %}
 
-    {% else %}
+    {% if latest_question_list %}
         <div class="list-group">
             {% for question in latest_question_list %}
                 <a href="{% url 'polls:detail' question.id %}" class="list-group-item list-group-item-action">
