--- a/Django_tutorial_poll_site/polls/static/polls/style.css
+++ b/Django_tutorial_poll_site/polls/static/polls/style.css
@@ -22,3 +22,15 @@ li a {
     background: none;
     border: none;
 }
+
+a:hover img {
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
+}
+
+form:hover button {
+    filter: alpha(opacity=70);
+    -moz-opacity: 0.7;
+    opacity: 0.7;
+}
