--- a/Django_tutorial_poll_site/polls/templates/polls/index.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/index.html
@@ -8,23 +8,77 @@
 <main class="container mt-4">
     <h1 class="mb-4">Polls List</h1>
 
-    {% if error_message %}
-        {% bootstrap_alert content=error_message alert_type="danger" %}
-    {% endif %}
+    <div class="list-group mb-1">
+        {% for question in page_obj %}
+            <a href="{% url 'polls:detail' question.id %}" class="list-group-item list-group-item-action">
+                {{ question.question_text }}
+            </a>
+        {% empty %}
+            <div class="alert alert-info" role="alert">
+                No polls are available.
+            </div>
+        {% endfor %}
+    </div>
 
-    {% if latest_question_list %}
-        <div class="list-group mb-3">
-            {% for question in latest_question_list %}
-                <a href="{% url 'polls:detail' question.id %}" class="list-group-item list-group-item-action">
-                    {{ question.question_text }}
-                </a>
-                <!-- detailはpolls.urls モジュールの path() 関数で name 引数を定義しているため、ここで使うことができる -->
-                <!-- "polls:"はpoll.urls モジュールURLのapp_nameで名前空間を設定している。他のアプリの同じビュー名があっても衝突しないようにするため -->
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page=1" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                        <span aria-hidden="true">&lt;</span>
+                    </a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="?page=1" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item disabled">
+                    <span class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">&lt;</span>
+                    </span>
+                </li>
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                    <li class="page-item active"><span class="page-link">{{ num }}</span></li>
+                {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                {% endif %}
             {% endfor %}
-        </div>
-    {% else %}
-        {% bootstrap_alert content="No polls are available." alert_type="info" %}
-    {% endif %}
+
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                        <span aria-hidden="true">&gt;</span>
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% else %}
+                <li class="page-item disabled" aria-label="Next">
+                    <span class="page-link">
+                        <span aria-hidden="true">&gt;</span>
+                    </span>
+                </li>
+                <li class="page-item disabled">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
 
     <a href="{% url 'polls:add_question' %}" class="btn btn-primary mb-3">Add New Question</a>
 
