--- a/Django_tutorial_poll_site/templates/common/header.html
+++ b/Django_tutorial_poll_site/templates/common/header.html
@@ -21,9 +21,16 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'user_auth:top'%}">Top</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'user_auth:login'%}">Login</a>
-                        </li>
+                        {% if not user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'user_auth:login' %}">Log in</a>
+                            </li>
+                        {% else %}
+                            <form action="{% url 'user_auth:logout' %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-link nav-link" style="border: none; background-color: transparent;">Log out</button>
+                            </form>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
