--- a/Django_tutorial_poll_site/templates/common/header.html
+++ b/Django_tutorial_poll_site/templates/common/header.html
@@ -18,18 +18,21 @@
                 </a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li class="nav-item m-1">
                             <a class="nav-link" href="{% url 'user_auth:top'%}">Top</a>
                         </li>
                         {% if not user.is_authenticated %}
-                            <li class="nav-item">
+                            <li class="nav-item m-1">
                                 <a class="nav-link" href="{% url 'user_auth:login' %}">Log in</a>
                             </li>
+                            <li class="nav-item m-1">
+                                <a class="nav-link" href="{% url 'user_auth:signup' %}">Sign up</a>
+                            </li>
                         {% else %}
-                            <li class="nav-item">
+                            <li class="nav-item m-1">
                                 <a class="nav-link" href="{% url 'user_auth:my_page' user.pk %}">My page</a>
                             </li>
-                            <form action="{% url 'user_auth:logout' %}" method="post">
+                            <form action="{% url 'user_auth:logout' %}" method="post" class="m-1">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-link nav-link" style="border: none; background-color: transparent;">Log out</button>
                             </form>
