--- a/Django_tutorial_poll_site/user_auth/templates/user_auth/my_page.html
+++ b/Django_tutorial_poll_site/user_auth/templates/user_auth/my_page.html
@@ -37,7 +37,9 @@
 	<!-- パスワード -->
 	<div class="row mt-4">
 		<div class="col"><h4>■ パスワード</h4></div>
-		<!-- 後で更新ボタン追加 -->
+		<div class="col text-right">
+			<a href="{% url 'user_auth:password_change' %}">更新</a>
+		</div>
 	</div>
 	<table class="table table-bordered">
 		<tbody>
