--- a/Django_tutorial_poll_site/user_auth/templates/user_auth/user_form.html
+++ b/Django_tutorial_poll_site/user_auth/templates/user_auth/user_form.html
@@ -9,6 +9,11 @@
 				<div class="card-header bg-success text-light">
 					<h4>{{ process_name }}</h4>
 				</div>
+				{% if process_name == "Sign up"%}
+					<small class="d-block text-right mx-3 mt-3">
+						すでにアカウントをお持ちの場合は、<a href="{% url 'user_auth:login' %}">こちら</a>からログインページに進んでください。
+					</small>
+				{% endif %}
 				<!-- カードボディー -->
 				<div class="card-body">
 					<form action="" method="POST">
