--- a/Django_tutorial_poll_site/polls/templates/polls/index.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/index.html
@@ -10,9 +10,10 @@
 
     <div class="list-group mb-1">
         {% for question in page_obj %}
-            <a href="{% url 'polls:detail' question.id %}" class="list-group-item list-group-item-action">
-                {{ question.question_text }}
-            </a>
+        <a href="{% url 'polls:detail' question.id %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            <strong>{{ question.question_text }}</strong>
+            <small class="text-muted text-end">Created by: {{ question.creator.username }}</small>
+        </a>
         {% empty %}
             <div class="alert alert-info" role="alert">
                 No polls are available.
