--- a/Django_tutorial_poll_site/templates/common/header.html
+++ b/Django_tutorial_poll_site/templates/common/header.html
@@ -19,7 +19,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item m-1">
-                            <a class="nav-link" href="{% url 'user_auth:top'%}">Top</a>
+                            <a class="nav-link" href="{% url 'polls:index'%}">List</a>
                         </li>
                         {% if not user.is_authenticated %}
                             <li class="nav-item m-1">
