modify error_message in user_form to be easier to view

--- a/Django_tutorial_poll_site/polls/templates/polls/results.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/results.html
@@ -15,5 +15,6 @@
 			{% endfor %}
 			</ul>
 		<a href="{% url 'polls:detail' question.id %}" class="btn btn-primary">Vote again?</a>
+		<a href="{% url 'polls:index' %}" class="btn btn-outline-secondary btn-block">Back to List</a>
     </main>
 {% endblock content %}
