--- a/Django_tutorial_poll_site/polls/templates/polls/detail.html
+++ b/Django_tutorial_poll_site/polls/templates/polls/detail.html
@@ -29,6 +29,7 @@
                     {% endfor %}
                 </div>
                 <button type="submit" class="btn btn-primary">Vote</button>
+                <a href="{% url 'polls:index' %}" class="btn btn-outline-secondary btn-block">キャンセル</a>
             </fieldset>
         </form>
     </main>
