--- a/Django_tutorial_poll_site/user_auth/templates/user_auth/user_form.html
+++ b/Django_tutorial_poll_site/user_auth/templates/user_auth/user_form.html
@@ -28,7 +28,11 @@
 						{% if field.help_text %}
 							<small class="form-text text-muted">{{ field.help_text }}</small>
 						{% endif %}
-						{{ field.errors }}
+						{% if field.errors %}
+							<div class="alert alert-danger mt-2 " style="padding: 15px 5px 0px 5px;">
+								{{ field.errors }}
+							</div>
+						{% endif %}
 						</div>
 					{% endfor %}
 					{% csrf_token %}
