--- a/Django_tutorial_poll_site/templates/common/header.html
+++ b/Django_tutorial_poll_site/templates/common/header.html
@@ -4,25 +4,25 @@
 <header style="align-items: center;">
     <nav class="navbar navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand async-link" href="/">
                 <img src="{% static 'images/background.png' %}" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
                 Poll Site
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item m-1">
-                        <a class="nav-link" href="{% url 'polls:index'%}">List</a>
+                        <a class="nav-link async-link" href="{% url 'polls:index'%}">List</a>
                     </li>
                     {% if not user.is_authenticated %}
                         <li class="nav-item m-1">
-                            <a class="nav-link" href="{% url 'user_auth:login' %}">Log in</a>
+                            <a class="nav-link async-link" href="{% url 'user_auth:login' %}">Log in</a>
                         </li>
                         <li class="nav-item m-1">
-                            <a class="nav-link" href="{% url 'user_auth:signup' %}">Sign up</a>
+                            <a class="nav-link async-link" href="{% url 'user_auth:signup' %}">Sign up</a>
                         </li>
                     {% else %}
                         <li class="nav-item m-1">
-                            <a class="nav-link" href="{% url 'user_auth:my_page' user.pk %}">My page</a>
+                            <a class="nav-link async-link" href="{% url 'user_auth:my_page' user.pk %}">My page</a>
                         </li>
                         <form action="{% url 'user_auth:logout' %}" method="post" class="m-1">
                             {% csrf_token %}
