refactor header to add offcanvas

--- a/Django_tutorial_poll_site/user_auth/templates/user_auth/logout_done.html
+++ b/Django_tutorial_poll_site/user_auth/templates/user_auth/logout_done.html
@@ -13,8 +13,8 @@
 				<p>ログアウトしました。</p>
 				<p>ご利用ありがとうございました。</p>
 				<hr class='mt-2 mb-2'>
-				<p><a href="{% url 'user_auth:login' %}">もう一度ログインする</a></p>
-				<p><a href="{% url 'user_auth:top' %}">トップページに戻る</a></p>
+				<p><a href="{% url 'user_auth:login' %}" class="async-link">もう一度ログインする</a></p>
+				<p><a href="{% url 'user_auth:top' %}" class="async-link">トップページに戻る</a></p>
 			</div>
 			</div>
 		</div>
