--- a/Django_tutorial_poll_site/user_auth/templates/user_auth/user_form.html
+++ b/Django_tutorial_poll_site/user_auth/templates/user_auth/user_form.html
@@ -11,7 +11,7 @@
 				</div>
 				{% if process_name == "Sign up"%}
 					<small class="d-block text-right mx-3 mt-3">
-						すでにアカウントをお持ちの場合は、<a href="{% url 'user_auth:login' %}">こちら</a>からログインページに進んでください。
+						すでにアカウントをお持ちの場合は、<a href="{% url 'user_auth:login' %}" class="async-link">こちら</a>からログインページに進んでください。
 					</small>
 				{% endif %}
 				<!-- カードボディー -->
