--- a/Django_tutorial_poll_site/templates/common/header.html
+++ b/Django_tutorial_poll_site/templates/common/header.html
@@ -2,34 +2,40 @@
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 <header style="align-items: center;">
-    <nav class="navbar navbar-expand-lg bg-primary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand async-link" href="/">
-                <img src="{% static 'images/background.png' %}" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-                Poll Site
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item m-1">
-                        <a class="nav-link async-link" href="{% url 'polls:index'%}">List</a>
-                    </li>
-                    {% if not user.is_authenticated %}
+            <a class="navbar-brand async-link" href="/">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav">
                         <li class="nav-item m-1">
-                            <a class="nav-link async-link" href="{% url 'user_auth:login' %}">Log in</a>
+                            <a class="nav-link async-link" href="{% url 'polls:index'%}">List</a>
                         </li>
-                        <li class="nav-item m-1">
-                            <a class="nav-link async-link" href="{% url 'user_auth:signup' %}">Sign up</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item m-1">
-                            <a class="nav-link async-link" href="{% url 'user_auth:my_page' user.pk %}">My page</a>
-                        </li>
-                        <form action="{% url 'user_auth:logout' %}" method="post" class="m-1">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-link nav-link" style="border: none; background-color: transparent;">Log out</button>
-                        </form>
-                    {% endif %}
-                </ul>
+                        {% if not user.is_authenticated %}
+                            <li class="nav-item m-1">
+                                <a class="nav-link async-link" href="{% url 'user_auth:login' %}">Log in</a>
+                            </li>
+                            <li class="nav-item m-1">
+                                <a class="nav-link async-link" href="{% url 'user_auth:signup' %}">Sign up</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item m-1">
+                                <a class="nav-link async-link" href="{% url 'user_auth:my_page' user.pk %}">My page</a>
+                            </li>
+                            <form action="{% url 'user_auth:logout' %}" method="post" class="m-1">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-link nav-link" style="border: none; background-color: transparent;">Log out</button>
+                            </form>
+                        {% endif %}
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
