--- a/Django_tutorial_poll_site/user_auth/templates/user_auth/password_change_done.html
+++ b/Django_tutorial_poll_site/user_auth/templates/user_auth/password_change_done.html
@@ -13,7 +13,7 @@
       <div class="card-body">
         <p>パスワードを更新しました。</p>
         <hr>
-        <a href="{% url 'user_auth:my_page' user.pk %}">My page</a>
+        <a href="{% url 'user_auth:my_page' user.pk %}" class="async-link">My page</a>
       </div>
     </div>
   </div>
