--- a/Django_tutorial_poll_site/user_auth/templates/user_auth/signup_done.html
+++ b/Django_tutorial_poll_site/user_auth/templates/user_auth/signup_done.html
@@ -14,7 +14,7 @@
 					<p>ユーザー登録が完了しました。ログインページへお進みください。</p>
 					<p class="text-danger">"ユーザー名"と"パスワード"は大切に管理してください。</p>
 					<hr>
-					<a href="{% url 'user_auth:login' %}">Log in</a>
+					<a href="{% url 'user_auth:login' %}" class="async-link">Log in</a>
 				</div>
 			</div>
 		</div>
